logs/products.cmfsquidtool.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/Extensions'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/i18n'...
Compiling './lib/python3.5/site-packages/Products/CMFSquidTool/patch.py'...
***   File "./lib/python3.5/site-packages/Products/CMFSquidTool/patch.py", line 48
    raise ValueError, ('Trying to unwrap non-wrapped '
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/CMFSquidTool/profiles'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/profiles/default'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/skins'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/skins/squid_tool'...
Listing './lib/python3.5/site-packages/Products/CMFSquidTool/tests'...
Compiling './lib/python3.5/site-packages/Products/CMFSquidTool/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/CMFSquidTool/tests/framework.py", line 69
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/CMFSquidTool/tests/test_connections.py'...
***   File "./lib/python3.5/site-packages/Products/CMFSquidTool/tests/test_connections.py", line 42
    print "Unexpected connection from the purge tool"
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/CMFSquidTool/utils.py'...
***   File "./lib/python3.5/site-packages/Products/CMFSquidTool/utils.py", line 39
    print args[0]
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/CMFSquidTool/www'...
Listing './lib/python3.5/site-packages/Products.CMFSquidTool-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
